app/assets/css/app.css
/* app css stylesheet */

/***************
 * GENERAL
 ***************
 */
html, body {
  width: 100%;
  height: 100%;
  background: #1E1E24;
  font-size: 14px;
  font-family: "Open Sans";
  font-weight: 300;
}

#particles canvas {
  opacity: 1;
  transition: 0.4s all ease;
}

@media (max-width: 40em) {
  html, body {
    font-size: 13px;
  }
  #particles canvas {
    visibility: hidden;
    display: none;
  }
}

@media (min-width: 120.063em) {
  html, body {
    font-size: 18px;
  }
}

body {
  font-family: "Open Sans", "Helvetica", sans-serif;
  margin: 0;
  padding: 0;
}

section {
  overflow: hidden;
}

section.page-section {
  padding: 70px 0;
}

li {
  list-style: none;
}

::-moz-selection {
  color: #EDECEA;
  background: #1E1E24;
}

::selection {
  color: #EDECEA;
  background: #1E1E24;
}

.full-width-row {
  overflow: hidden;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: initial;
}

.transition {
  transition: 0.2s all ease-in;
}

.alert {
  padding: 25px;
  box-shadow: 10px 10px 0px rgba(30, 30, 36, 0.15);
  background: #EDECEA;
  color: #EDECEA;
  margin: 0 0 35px 0;
  font-variant: small-caps;
  text-transform: lowercase;
  font-weight: 600;
  font-family: "Open Sans", "Helvetica", sans-serif;
  font-size: 1.2em;
  background: white;
}

.alert.success {
  color: #1E1E24;
}
.alert.success:before {
  content: "\f00c  ";
  font-family: "FontAwesome";
}

.alert.error {
  color: #C8242C;
}
.alert.error:before {
  content: "\f00d  ";
  font-family: "FontAwesome";
}


#messages {
  font-size: 0.5rem;
  position: fixed;
  bottom: 0;
  right: 30px;
  z-index: 9999;
}

.message {
  background: #333;
  box-shadow: 10px 10px 0px rgba(30, 30, 36, 0.3);
  padding: 20px;
  opacity: 0.75;
  transition: opacity 0.2s ease-in-out;
}

.message hr {
  border-color: #444;
}

.message:hover {
  opacity: 1;
}

.message .action-links {
  text-align: right;
}

.message p, .message a, .message h6 {
  color: white;
}

.message h6 {
  font-weight: bold;
}

.message p {
  text-transform: none;
}

.message .action-links a {
  font-size: 0.9rem;
}

.message a.validate {
  font-weight: 600;
  margin-right: 15px;
  transition: border 0.2s ease-in;
  border-bottom: 1px solid transparent;
}

.message a.cancel {
  color: #888;
}

.message a.validate:hover, .message a.validate:focus {
  border-bottom: 1px solid white;
}

.message.close {
}


h1, h5 {
  color: #EDECEA;
  text-transform: uppercase;
  font-variant: small-caps;
  font-weight: 300;
  font-family: "Open Sans";
}

h5 {
  font-size: 1.2rem;
  letter-spacing: 0.95rem;
  padding-left: 10px;
}

.js .js-alert {
  display: none;
  visibility: hidden;
}

.browsehappy, .no-js .js-alert {
  display: block;
  width: 100%;
  padding: 25px;
  background: #EDECEA;
  color: #1E1E24;
  z-index: 9999;
  position: fixed;
  text-align: center;
}
.browsehappy a, .no-js .js-alert a {
  color: #C8242C;
}

.no-js #loader {
  z-index: 9;
}


/***************
 * PAGES ANIMATIONS
 ***************
 */
.at-view-fade-in.ng-enter #particles canvas,
.at-view-fade-out.ng-leave #particles canvas {
  opacity: 0;
}
.at-view-fade-out.ng-leave #particles canvas {
  visibility: hidden;
  display: none;
}

.at-view-fade-in.ng-enter {
  -webkit-transition-property: opacity;
  -moz-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.3s;
  -moz-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  opacity: 0;
}

.at-view-fade-in.ng-enter-active {
  opacity: 1;
}

.at-view-fade-out.ng-leave {
  -webkit-transition-property: opacity;
  -moz-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.3s;
  -moz-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  opacity: 1;
}

.at-view-fade-out.ng-leave-active {
  opacity: 0;
}

.fade.ng-hide {
    opacity: 0;
}

.fade.ng-hide-remove,
.fade.ng-hide-add {
  display: block !important;
}

.fade.ng-hide-remove {
    transition: all linear 200ms;
}

.fade.ng-hide-add {
    transition: all linear 200ms;
}


/***************
 * SCROLLBARS
 ***************
 */
::-webkit-scrollbar-track
{
  box-shadow: none!important;
  border: none;
  background-color: #EDECEA!important;
}

::-webkit-scrollbar
{
  width: 4px!important;
  background-color: #EDECEA!important;
  box-shadow: none!important;
  border: none;
}

::-webkit-scrollbar-thumb
{
  background-color: #1E1E24!important;
  border: none!important;
  box-shadow: none!important;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #333!important;
}


/***************
 * HOME HEADER
 ***************
 */
header#home {
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  text-align: center;
  background: url('../img/stardust.png');
  background-repeat: repeat-x, repeat-y;
}

header#home.secondary-header {
  min-height: 250px;
  max-height: 250px;
  overflow: hidden;
}

header#home .row {
  z-index: 999;
}

header#home h1 {
  word-wrap: break-word;
  font-size: 5rem;
  line-height: 5.5rem;
  letter-spacing: 1rem;
}

header#home.secondary-header h1 {
  font-size: 2em;
}

header#home .bg-wrapper {
  background: url('../img/smoke.png');
  background-position: center -110px;
  background-size: 70em;
  opacity: 0.9;
  z-index: 0;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
header#home.secondary-header .bg-wrapper {
  max-height: 250px;
  background-size: cover;
  background-position: center;
}

@media (min-width: 120.063em) {
  header#home .bg-wrapper {
    background-size: 100%;
  }
}

header#home h1 strong {
  font-weight: 600;
}


/***************
 * MENU
 ***************
 */
li.divider {
  clear: both;
  margin: 10px 0;
}
/* ... */

